# plcAppCICD

./: .gitlab-ci.yml  API-test.yml  API_test.postman_collection.json  CMakeLists.txt  CMakeUserPresets.json  README.md  TestFile2  conanfile.txt  plcnext.proj
.conan/: CMakePresets.json  CURL-release-x86_64-data.cmake  CURLConfig.cmake  CURLConfigVersion.cmake  FindCURL.cmake  FindOpenSSL.cmake  OpenSSL-Target-release.cmake  OpenSSL-release-x86_64-data.cmake  OpenSSLConfig.cmake  OpenSSLConfigVersion.cmake  ZLIB-release-x86_64-data.cmake  conan_toolchain.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json  module-CURL-Target-release.cmake  module-CURL-release-x86_64-data.cmake  module-OpenSSL-release-x86_64-data.cmake
gtest/: CMakeLists.txt  test.cpp  testlic.lic
src/: ExampleAuthenticationProvider.cpp  curl.cpp  jsoncpp.cpp  verify.cpp
src/include/: ExampleAuthenticationProvider.hpp  curl.h
src/include/custom/: verify.h
src/jwt/json/: a.out  test_json.cc
tests/: API-test.yml  unit_test.yml
